fix: 加入購物車 z-index要高一些 #52

--- a/js/src/assets/scss/custom.scss
+++ b/js/src/assets/scss/custom.scss
@@ -209,7 +209,8 @@ $pad_width: 810px;
 		}
 	}
 }
-.ant-message {
+.ant-message,
+.ant-notification {
 	z-index: 999999 !important;
 }
 
